crates/stackable-versioned-macros/tests/inputs/fail/applied_to_struct.rs
use stackable_versioned_macros::versioned;

#[versioned()]
pub struct Foo {}

fn main() {}
