crates/stackable-versioned-macros/tests/inputs/fail/applied_to_struct.stderr
error: attribute macro `versioned` can be only be applied to modules
 --> tests/inputs/fail/applied_to_struct.rs:4:1
  |
4 | pub struct Foo {}
  | ^^^
